<resources>
    <string name="app_name">SE2 Einzelbeispiel</string>
    <string name="matrikelnummer">Matrikelnummer</string>
    <string name="antwort_vom_server">Antwort vom Server:</string>
    <string name="senden">Senden</string>
    <string name="bitte_gib_deine_matrikelnummer_ein">Bitte gib deine Matrikelnummer ein</string>
    <string name="berechnen">Berechnen</string>
    <string name="ergebnis">Ergebnis:</string>
</resources>